--- a/DWC/Ejemplos/asdfdasf.html
+++ b/DWC/Ejemplos/asdfdasf.html
@@ -23,6 +23,7 @@
 
             var resultado = num.toString(base);
             alert("El número " + num + " en base " + base + " = " + resultado);
+            alert("fdasfdas")
         }
 
     </script>
