haztelo asi bro

--- a/DWC/Tema3/T3E1/Cronometro/Cronometro.html
+++ b/DWC/Tema3/T3E1/Cronometro/Cronometro.html
@@ -91,6 +91,8 @@
                 if (horas <10)
                 horas = "0"+horas;
                 horasHTML.innerHTML = horas;
+                
+               echo("pito") 
             }
             }
         }
