--- a/DWC/Tema3/RelacionDeEjercicios3/Ejercicio20.html
+++ b/DWC/Tema3/RelacionDeEjercicios3/Ejercicio20.html
@@ -9,9 +9,9 @@
 <body>
     <script>
         var mes = new Date();
-        if (mes.getMonth < 4)
+        if (mes.getMonth() < 4)
             document.write("1er cuatrimestre");
-        else if (mes.getMonth >= 4 && mes.getMonth < 8)
+        else if (mes.getMonth() >= 4 && mes.getMonth() < 8)
             document.write("2ndo cuatrimestre");
         else
             document.write("3er cuatrimestre");
