--- a/DWC/T3P1/Matriculas.html
+++ b/DWC/T3P1/Matriculas.html
@@ -8,6 +8,10 @@
     <script src="Matriculas.js"></script>
 </head>
 <body>
-    
+    <p id="DoblePareja"></p>
+    <p id="Trio"></p>
+    <p id="EscaleraSimple"></p>
+    <p id="EscaleraCompleta"></p>
+    <p id="Poker"></p>
 </body>
 </html>
