--- a/DWC/T3P1/Matriculas.html
+++ b/DWC/T3P1/Matriculas.html
@@ -27,7 +27,7 @@
             <h1>Apartado 2</h1>
             <br><br>
             <p>Introduce un número de 4 dígitos</p>
-            <input type="number" id="numero"><button onclick="apartado2()">Introducir</button>
+            <input type="number" id="numero" min="1000"><button onclick="apartado2()">Introducir</button>
             <br>
             <p id="figura">Tu figura es: </p>
         </div>
