--- a/DWC/Tema3/Formulario/formulario.html
+++ b/DWC/Tema3/Formulario/formulario.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
+
 </head>
 <body>
-    <script src="formulario.js" defer></script>
     <h2>Formulario</h2>
+
+    <script src="formulario.js" defer></script>
     
     <form action="#">
       <label for="nombre">Nombre</label><br>
-      <input type="text" id="nombre" name="nombre"><br><br>
+      <input type="text" id="nombre" onblur="mayus('nombre')" name="nombre"><br><br>
       <label for="apellidos">Apellidos</label><br>
-      <input type="text" id="apellidos" name="apellidos"><br><br>
+      <input type="text" id="apellidos" onblur="mayus('nombre')" name="apellidos"><br><br>
       <label for="edad">Edad</label><br>
       <input type="number" id="edad" name="edad"><br><br>
       <label for="NIF">NIF</label><br>
