--- a/DWC/Tema3/Formulario/formulario.html
+++ b/DWC/Tema3/Formulario/formulario.html
@@ -16,29 +16,31 @@
       <label for="nombre">Nombre</label><br>
       <input type="text" id="nombre" onblur="mayus('nombre')" name="nombre"><br><br>
       <label for="apellidos">Apellidos</label><br>
-      <input type="text" id="apellidos" onblur="mayus('nombre')" name="apellidos"><br><br>
+      <input type="text" id="apellidos" onblur="mayus('apellidos')" name="apellidos"><br><br>
       <label for="edad">Edad</label><br>
-      <input type="number" id="edad" name="edad"><br><br>
+      <input type="number" onblur="comprobarEdad()" id="edad" name="edad"><br><br>
       <label for="NIF">NIF</label><br>
-      <input type="text" id="NIF" name="NIF"><br><br>
+      <input type="text" onblur="comprobarNIF()" id="NIF" name="NIF"><br><br>
       <label for="email">E-mail</label><br>
-      <input type="email" id="email" name="email"><br><br>
+      <input type="email" id="email" onblur="comprobarEmail()" name="email"><br><br>
       <label for="provincia">Provincia</label><br>
-      <select name="provincia" id="provincia">
-        <option value="Almeria">Almería</option>
-        <option value="Granada">Granada</option>
-        <option value="Malaga">Málaga</option>
+      <select name="provincia" onblur="comprobarProvincia()" id="provincia">
+        <option value="default">Seleccione Provincia</option>
+        <option value="almeria">Almería</option>
+        <option value="granada">Granada</option>
+        <option value="malaga">Málaga</option>
       </select><br><br>
       <label for="fecha">Fecha Nacimiento</label><br><br>
       <input type="date" id="fechaNac" name="fecha"><br><br>
       <label for="telefono">Teléfono</label><br>
-      <input type="tel" id="telefono" name="telefono"><br><br>
+      <input type="number" onblur="comprobarTelefono()" id="telefono" name="telefono"><br><br>
       <label for="hora">Hora de visita</label><br>
       <input type="time" id="horaVisita" name="hora"><br><br>
-      <input type="submit" id="botonEnviar" value="Enviar"> <button id="limpiar">Limpiar</button>
-    </form> 
+      <input type="submit" id="botonEnviar" value="Enviar"> <input type="reset" value="Limpiar">
+    </form>
     <div>
-
+        <p id="errores">Errores: </p>
+        <p id="cookies">Número de intentos: </p>
     </div>
     </body>
 </html>
