--- a/DWC/Tema3/Formulario/formulario.html
+++ b/DWC/Tema3/Formulario/formulario.html
@@ -12,7 +12,7 @@
 
     <script src="formulario.js" defer></script>
     
-    <form action="#">
+    <form action="#" name="formulario">
       <label for="nombre">Nombre</label><br>
       <input type="text" id="nombre" onblur="mayus('nombre')" name="nombre"><br><br>
       <label for="apellidos">Apellidos</label><br>
@@ -40,7 +40,7 @@
     </form>
     <div>
         <p id="errores">Errores: </p>
-        <p id="cookies">Número de intentos: </p>
+        <p>Número de intentos: </p><p id="cookies"></p>
     </div>
     </body>
 </html>
