--- a/DWC/Repaso exament T1234/examen.html
+++ b/DWC/Repaso exament T1234/examen.html
@@ -16,6 +16,7 @@
         <button onclick="cerrarVentana1()">Cerrar ventana 1</button>
         <button onclick="cerrarVentana2()">Cerrar ventana 2</button>
         <button onclick="cerrarVentana3()">Cerrar ventana 3</button>
+        <button onclick="cambiaColor()">sdfa</button>
     </div>
 </body>
 </html>
