--- a/DWC/2ndo Trimestre/T4E1_Relacion4/Ejercicio46.html
+++ b/DWC/2ndo Trimestre/T4E1_Relacion4/Ejercicio46.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <script>
+        // Array y premio
         let numeros = new Array(1000);
         let premio = 1000;
-
+        // Bucle para rellenar el array con los premios y mostrarlos
         for (let i = 0; i < 10; i++)
         {
             let numAleatorio = Math.floor(Math.random() * 1000);
